fix(react_app): fix ComponentCard with more than 3 tags being too wide

--- a/react_app/src/ComponentPages/components/Component.module.css
+++ b/react_app/src/ComponentPages/components/Component.module.css
@@ -70,8 +70,10 @@
 }
 
 .tagBackground {
-    display: flex;
+    display: inline flex;
+    flex-flow: row wrap;
     gap: 0.5rem;
+    max-width: 55vh;
 }
 
 .tag {
